tests/ui/errors/snapshots/parse_value_enum_negative_below_i64_min.snap
---
source: tests/ui/errors/mod.rs
---
  [error] Syntax error
   ╭─[test.lis:3:9]
 2 │ enum Bad: int64 {
 3 │   Way = -9223372036854775809,
   ·         ──────────┬─────────
   ·                   ╰── negative integer out of range
 4 │ }
   ╰────
  help: Negative integer must be ≥ -9223372036854775808 (i64 minimum) · code: [parse.syntax_error]
